letsencryptingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: azure-voting-letsencrypt-staging
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - stage.dev.mmi-project.it
    secretName: azure-voting-secret-name
  rules:
  - host: stage.dev.mmi-project.it 
    http:
      paths:
      - path: /
        backend:
          serviceName: azure-vote-front
          servicePort: 80
